@@ -77,6 +77,8 @@ MyTorrentsView.seeds=Seeds
 MyTorrentsView.seeds.info=# seeds connected to (# seeds total)
 MyTorrentsView.peers=Peers
 MyTorrentsView.peers.info=# peers connected to (# peers total)
+MyTorrentsView.completed=Completed
+MyTorrentsView.completed.info=# of peers that finished downloading the torrent as reported by the tracker
 MyTorrentsView.downspeed=Down Speed
 MyTorrentsView.upspeed=Up Speed
 MyTorrentsView.eta=ETA
@@ -222,24 +224,25 @@ GeneralView.section.info=Info
 GeneralView.title.short=General
 GeneralView.title.full=General
 GeneralView.label.timeelapsed=Time Elapsed : 
-GeneralView.label.remaining=   Remaining : 
+GeneralView.label.remaining=Remaining : 
 GeneralView.label.downloaded=Downloaded : 
-GeneralView.label.downloadspeed=   Download Speed : 
+GeneralView.label.downloadspeed=Download Speed : 
 GeneralView.label.maxuploads=Upload Slots : 
 GeneralView.label.maxuploads.tooltip=Maximum number of peers that will be unchoked at any given time.
 GeneralView.label.uploaded=Uploaded : 
-GeneralView.label.uploadspeed=   Upload Speed : 
+GeneralView.label.uploadspeed=Upload Speed : 
 GeneralView.label.seeds=Seeds : 
-GeneralView.label.peers=   Peers : 
+GeneralView.label.peers=Peers :
+GeneralView.label.completed=Completed : 
 GeneralView.label.totalspeed=Swarm Speed :
 GeneralView.label.totalspeed.tooltip=Total (and average) speed of all clients you are connected to.
 GeneralView.label.averagespeed=average
 GeneralView.label.filename=Name : 
-GeneralView.label.totalsize=   Total Size : 
+GeneralView.label.totalsize=Total Size : 
 GeneralView.label.savein=Save In : 
-GeneralView.label.hash=   Hash : 
+GeneralView.label.hash=Hash : 
 GeneralView.label.numberofpieces=\# of Pieces : 
-GeneralView.label.size=   Size : 
+GeneralView.label.size=Size : 
 GeneralView.label.tracker=Tracker Status : 
 GeneralView.label.updatein=   Update in : 
 GeneralView.label.trackerurl=Tracker URL :
